<resources>
    <string name="app_name">Be Healthy</string>

    <!--common-->
    <string name="main_menu">Main</string>

    <!--main menu-->
    <string name="bmi_calculator">BMI calculator</string>
    <string name="calories_calculator">Calories calculator</string>
    <string name="get_receip">Food Recommendation</string>

    <!--bmi calculator-->
    <string name="weight_amount">Enter Weight</string>
    <string name="height_amount">Enter Height</string>
    <string name="calculated_bmi">Calculated BMI:</string>

    <!--calories calculator-->
    <string name="female_btn">Female</string>
    <string name="male_btn">Male</string>
    <string name="calculate_calories_btn">Calculate</string>
    <string name="weight_hint">Your Weight (Kilograms)</string>
    <string name="height_hint">Your Height (Meters)</string>
    <string name="age_hint">Your Age (Years)</string>

    <!--quiz    -->
    <string name="quiz">Quiz</string>
    <string name="title_quiz">Balanced Diet Quiz</string>
    <string name="quiz_question_label">Question:</string>
    <string name="score_label">Score:</string>
    <string name="restart">Restart</string>
    <string name="end">End of quiz</string>
    <string name="good_answer">Great!</string>
    <string name="correct_answer">Correct answer is:</string>

    <string name="question_1">What is the basis of the food pyramid?</string>
    <string name="question_1_ans1">sparkling water</string>
    <string name="question_1_ans2">macchiato cappuccino</string>
    <string name="question_1_ans3">fruits and vegetables</string>
    <string name="question_1_ans4">pizza</string>

    <string name="question_2">How many vegetables should we eat per day according to WHO?</string>
    <string name="question_2_ans1">2 tomatoes and 3 potatoes</string>
    <string name="question_2_ans2">400g</string>
    <string name="question_2_ans3">0g</string>
    <string name="question_2_ans4">vegetables are life</string>

    <string name="question_3">What macronutrient is necessary to absorb vitamins?</string>
    <string name="question_3_ans1">nutritional proteins</string>
    <string name="question_3_ans2">nutritional carbohydrates</string>
    <string name="question_3_ans3">nutritional sugars</string>
    <string name="question_3_ans4">nutritional fats</string>

    <string name="question_4">Which fruit has the most vitamin C?</string>
    <string name="question_4_ans1">yellow pepper</string>
    <string name="question_4_ans2">lemon</string>
    <string name="question_4_ans3">brussels sprouts</string>
    <string name="question_4_ans4">green pepper</string>

    <string name="question_5">How many percent of the total energy should be from sugar consumption?</string>
    <string name="question_5_ans1">10%</string>
    <string name="question_5_ans2">30%</string>
    <string name="question_5_ans3">60%</string>
    <string name="question_5_ans4">99,94%</string>

    <string name="question_6">How many liters of water should you drink during the day?</string>
    <string name="question_6_ans1">5</string>
    <string name="question_6_ans2">10</string>
    <string name="question_6_ans3">as many liters as kilograms you weigh</string>
    <string name="question_6_ans4">2</string>

    <string name="question_7">When is the best time to have your last meal?</string>
    <string name="question_7_ans1">last meal? I eat all the time</string>
    <string name="question_7_ans2">at a meeting at work</string>
    <string name="question_7_ans3">2h before sleep</string>
    <string name="question_7_ans4">moments before the execution</string>

    <string name="_00">00</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="x_of_y">x/y</string>
    <string name="test_question">Test question</string>

    <string name="quiz_error">#ERROR</string>
    <string name="quiz_problem">PROBLEM</string>

    <!--  BMI Charts  -->
    <string name="add_bmi_data">test</string>
    <string name="add_data_to_chart">Add</string>
</resources>