<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroud_all"
    android:columnCount="2"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:useDefaultMargins="true"
    tools:context=".BmiCalculatorActivity">

    <EditText
        android:id="@+id/weightEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weightView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/text_fields"
        android:elevation="@dimen/elevation"
        android:hint="@string/weight_amount"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/heightEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/heightView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/text_fields"
        android:elevation="@dimen/elevation"
        android:hint="@string/height_amount"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bmiLabelView"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/calculated_bmi"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/calculatedBmiView"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="right"
        android:background="@color/text_fields"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="372dp"
        android:layout_height="254dp"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/add_bmi_data"
        app:layout_constraintBottom_toTopOf="@+id/backToMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToChartBtn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addToChartBtn"
        android:layout_width="125dp"
        android:layout_height="42dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginTop="80dp"
        android:text="@string/add_data_to_chart"
        android:backgroundTint="@color/hearth_color"
        app:layout_constraintBottom_toTopOf="@+id/barchart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bmiTextView"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

    <Button
        android:id="@+id/backToMainButton"
        android:layout_row="4"
        android:layout_column="0"
        android:backgroundTint="@color/hearth_color"
        android:text="@string/main_menu"/>
</GridLayout>